unpackaged/main/default/objects/XDO_Tool_Platform_Tracking_Event__e/XDO_Tool_Platform_Tracking_Event__e.object-meta.xml
<CustomObject>
    <label>Tracking Event</label>
    <pluralLabel>Tracking Events</pluralLabel>
</CustomObject>