unpackaged/main/default/objects/XDO_Tool_Platform_Tracking_Event__e/fields/Once__c.field-meta.xml
<CustomField>
    <fullName>Once__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this particular event action should only be recorded once</description>
    <label>Once?</label>
    <type>Checkbox</type>
</CustomField>